src/OpenCvSharp/Internal/Interop/NativeMethods.ObjDetect.Aruco.LibraryImport.cs

#if NET7_0_OR_GREATER
using System;
using System.Runtime.InteropServices;

namespace JYPPX.OpenCvSharp.Internal.Interop
{
    internal static unsafe partial class NativeMethods
    {
        [StructLayout(LayoutKind.Sequential)]
        internal struct ArucoDetectorParamsNative
        {
            internal int AdaptiveThreshWinSizeMin;
            internal int AdaptiveThreshWinSizeMax;
            internal int AdaptiveThreshWinSizeStep;
            internal double AdaptiveThreshConstant;
            internal double MinMarkerPerimeterRate;
            internal double MaxMarkerPerimeterRate;
            internal double PolygonalApproxAccuracyRate;
            internal double MinCornerDistanceRate;
            internal int MinDistanceToBorder;
            internal double MinMarkerDistanceRate;
            internal float MinGroupDistance;
            internal int CornerRefinementMethod;
            internal int CornerRefinementWinSize;
            internal float RelativeCornerRefinementWinSize;
            internal int CornerRefinementMaxIterations;
            internal double CornerRefinementMinAccuracy;
            internal int MarkerBorderBits;
            internal int PerspectiveRemovePixelPerCell;
            internal double PerspectiveRemoveIgnoredMarginPerCell;
            internal double MaxErroneousBitsInBorderRate;
            internal double MinOtsuStdDev;
            internal double ErrorCorrectionRate;
            internal float AprilTagQuadDecimate;
            internal float AprilTagQuadSigma;
            internal int AprilTagMinClusterPixels;
            internal int AprilTagMaxNmaxima;
            internal float AprilTagCriticalRad;
            internal float AprilTagMaxLineFitMse;
            internal int AprilTagMinWhiteBlackDiff;
            internal int AprilTagDeglitch;
            internal int DetectInvertedMarker;
            internal int UseAruco3Detection;
            internal int MinSideLengthCanonicalImg;
            internal float MinMarkerLengthRatioOriginalImg;
            internal float ValidBitIdThreshold;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct ArucoRefineParamsNative
        {
            internal float MinRepDistance;
            internal float ErrorCorrectionRate;
            internal int CheckAllOrders;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct ArucoCharucoParamsNative
        {
            internal int MinMarkers;
            internal int TryRefineMarkers;
            internal int CheckMarkers;
        }

        [StructLayout(LayoutKind.Sequential)]
        internal struct MccDetectorParamsNative
        {
            internal int AdaptiveThreshWinSizeMin;
            internal int AdaptiveThreshWinSizeMax;
            internal int AdaptiveThreshWinSizeStep;
            internal double AdaptiveThreshConstant;
            internal double MinContoursAreaRate;
            internal double MinContoursArea;
            internal double ConfidenceThreshold;
            internal double MinContourSolidity;
            internal double FindCandidatesApproxPolyDPEpsMultiplier;
            internal int BorderWidth;
            internal float B0Factor;
            internal float MaxError;
            internal int MinContourPointsAllowed;
            internal int MinContourLengthAllowed;
            internal int MinInterContourDistance;
            internal int MinInterCheckerDistance;
            internal int MinImageSize;
            internal int MinGroupSize;
        }

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_create_default")]
        internal static partial int ArucoDictionaryCreateDefault(out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_create_predefined")]
        internal static partial int ArucoDictionaryCreatePredefined(int dictionaryId, out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_create_from_bytes_list")]
        internal static partial int ArucoDictionaryCreateFromBytesList(IntPtr bytesList, int markerSize, int maxCorrectionBits, out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_extend")]
        internal static partial int ArucoDictionaryExtend(int markerCount, int markerSize, IntPtr baseDictionary, int randomSeed, out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_release_handle")]
        internal static partial void ArucoDictionaryReleaseHandle(IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_bytes_list")]
        internal static partial int ArucoDictionaryGetBytesList(IntPtr dictionary, out IntPtr bytesList);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_set_bytes_list")]
        internal static partial int ArucoDictionarySetBytesList(IntPtr dictionary, IntPtr bytesList);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_marker_size")]
        internal static partial int ArucoDictionaryGetMarkerSize(IntPtr dictionary, out int markerSize);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_set_marker_size")]
        internal static partial int ArucoDictionarySetMarkerSize(IntPtr dictionary, int markerSize);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_max_correction_bits")]
        internal static partial int ArucoDictionaryGetMaxCorrectionBits(IntPtr dictionary, out int maxCorrectionBits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_set_max_correction_bits")]
        internal static partial int ArucoDictionarySetMaxCorrectionBits(IntPtr dictionary, int maxCorrectionBits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_identify")]
        internal static partial int ArucoDictionaryIdentify(IntPtr dictionary, IntPtr bits, double maxCorrectionRate, out int identified, out int index, out int rotation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_identify_with_threshold")]
        internal static partial int ArucoDictionaryIdentifyWithThreshold(IntPtr dictionary, IntPtr cellPixelRatio, double maxCorrectionRate, float validBitIdThreshold, out int identified, out int index, out int rotation);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_distance_to_id")]
        internal static partial int ArucoDictionaryGetDistanceToId(IntPtr dictionary, IntPtr bits, int id, int allRotations, out int distance);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_generate_image_marker")]
        internal static partial int ArucoDictionaryGenerateImageMarker(IntPtr dictionary, int id, int sidePixels, IntPtr image, int borderBits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_marker_bits")]
        internal static partial int ArucoDictionaryGetMarkerBits(IntPtr dictionary, int markerId, int rotationId, out IntPtr bits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_byte_list_from_bits")]
        internal static partial int ArucoDictionaryGetByteListFromBits(IntPtr bits, out IntPtr byteList);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_dictionary_get_bits_from_byte_list")]
        internal static partial int ArucoDictionaryGetBitsFromByteList(IntPtr byteList, int markerSize, int rotationId, out IntPtr bits);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_default_params")]
        internal static partial int ArucoDetectorDefaultParams(out ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_refine_default_params")]
        internal static partial int ArucoRefineDefaultParams(out ArucoRefineParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_mcc_detector_default_params")]
        internal static partial int MccDetectorDefaultParams(out MccDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_charuco_default_params")]
        internal static partial int ArucoCharucoDefaultParams(out ArucoCharucoParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_create")]
        internal static partial int ArucoDetectorCreate(IntPtr dictionary, ref ArucoDetectorParamsNative detectorParameters, ref ArucoRefineParamsNative refineParameters, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_create_multi_dictionary")]
        internal static partial int ArucoDetectorCreateMultiDictionary(IntPtr[] dictionaries, int dictionaryCount, ref ArucoDetectorParamsNative detectorParameters, ref ArucoRefineParamsNative refineParameters, out IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_release_handle")]
        internal static partial void ArucoDetectorReleaseHandle(IntPtr detector);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_dictionary")]
        internal static partial int ArucoDetectorGetDictionary(IntPtr detector, out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_dictionary")]
        internal static partial int ArucoDetectorSetDictionary(IntPtr detector, IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_dictionaries_count")]
        internal static partial int ArucoDetectorGetDictionariesCount(IntPtr detector, out int dictionaryCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_dictionary_at")]
        internal static partial int ArucoDetectorGetDictionaryAt(IntPtr detector, int dictionaryIndex, out IntPtr dictionary);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_dictionaries")]
        internal static partial int ArucoDetectorSetDictionaries(IntPtr detector, IntPtr[] dictionaries, int dictionaryCount);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_detector_parameters")]
        internal static partial int ArucoDetectorGetDetectorParameters(IntPtr detector, out ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_set_detector_parameters")]
        internal static partial int ArucoDetectorSetDetectorParameters(IntPtr detector, ref ArucoDetectorParamsNative parameters);

        [LibraryImport(NativeLibraryNames.CurrentNativeLibrary, EntryPoint = "jyppx_ocv_aruco_detector_get_refine_parameters")]
        internal static partial int ArucoDetectorGetRefineParameters(IntPtr detector, out ArucoRefineParamsNative parameters);
